--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Gerador de senha</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./gerador/style.css">
 </head>
 <body>
     
