--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-<img class="logo" src="./assets/logo.png" alt="Gerador de senha logo">
+<img class="logo" src="./gerador/assets/logo.png" alt="Gerador de senha logo">
 
 <main class="container-input">
     <span>tamanho <span id="valor"></span> caracteres</span>
@@ -26,6 +26,6 @@
         <Span class="tooltip">Clique na senha para copiar 👍</Span>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./gerador/script.js"></script>
 </body>
 </html>
